# mcp-tool-optimizer

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
commands/: mcp_tool_optimize.py
shared/: agent.py  click.py
