[project]
name = "mcp-tool-optimizer"
version = "0.1.0"
description = "Small and simple cli to optimize tool descriptions of MCP tools leveraging LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "mcp>=1.12.4",
    "openai==1.98.0",
    "openai-agents>=0.2.5",
]

[project.scripts]
mcp-tool-opt = "main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "E", "W", "UP", "B", "SIM"]
ignore = ["E501"]